# clope_cpp

./: CMakeLists.txt  README.md  test_clope.cpp
include/: clope.cpp  clope.hpp  cluster.cpp  cluster.hpp  database.hpp  dbmushroom.cpp  dbmushroom.hpp  transaction.hpp  txmushroom.cpp  txmushroom.hpp
